overflow fix pass one

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   background-color: #222;
   color: #fff;
   min-width: 700px;
-  overflow-x: none;
+  overflow-x: hidden;
 }
 
 .header {
